# LFU

./: CMakeLists.txt  README.md  check.txt
.github/workflows/: workflow.yml
include/: CMakeLists.txt  get_page.hpp  getting_value.hpp  ideal_cache.hpp  lfu_cache.hpp
source/: CMakeLists.txt  ideal_main.cpp  lfu_main.cpp
tests/: 10test.txt  1test.txt  2test.txt  3test.txt  4test.txt  5test.txt  6test.txt  7test.txt  8test.txt  9test.txt  CMakeLists.txt  gen_tests.py  ideal_answers.txt  lfu_answers.txt  tests.cpp
